added jinja-partials features

--- a/templates/shared/_layout.html
+++ b/templates/shared/_layout.html
@@ -54,7 +54,7 @@
 <script src="/static/js/popper-1.16.1.min.js"></script>
 <script src="/static/js/bootstrap-4.6.1.min.js"></script>
 
-
+<script src="/static/js/htmx.min.js"></script>
 {% block additional_js %}{% endblock %}
 
 </body>
