--- a/templates/shared/_layout.html
+++ b/templates/shared/_layout.html
@@ -33,6 +33,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link" href="/feed"><i class="fas fa-list"></i></a></li>
+            <li class="nav-item"><a class="nav-link" href="/videos/search"><i class="fas fa-search"></i></a></li>
         </ul>
     </div>
 </nav>
