--- a/templates/videos/search.html
+++ b/templates/videos/search.html
@@ -1,7 +1,25 @@
 {% extends "shared/_layout.html" %}
 {% block main_content %}
 
-<h1>Search Page</h1>
+    <div class="search-inputs">
+        <h1>Search video collector</h1>
+        <input  name="search_text"
+                placeholder="Search for a video"
+                class="form control"
+                type="text"
+                value="{{ '' if not search_text else search_text }}"
+                hx-get="/videos/search"
+                hx-trigger="keyup changed delay:250ms"
+                hx-target="#search-results"
+                hx-push-url="true">
+    
+    </div>
+    <div class="videos search-results" id="search-results">
+        {% if search_text %}
+            {{ render_partial('videos/partials/search_results.html', videos=videos) }}
+        {% endif %}
+    </div>
+
 
 {% endblock %}
 
