--- a/templates/feed/index.html
+++ b/templates/feed/index.html
@@ -5,22 +5,10 @@
 
         <h1>Video Collector: Recent Videos</h1>
 
-        {% for v in videos %}
-
-            <div class="video">
-                <div><span class="title">{{ v.title }}</span></div>
-                <a href="/videos/play/{{ v.id }}">
-
-
-                    <img src="https://img.youtube.com/vi/{{ v.id }}/maxresdefault.jpg"
-                         class="img img-responsive {{ ' '.join(classes) }}"
-                         alt="{{ v.title }}"
-                         title="{{ v.title }}">
-
-                </a>
-            </div>
-
-        {% endfor %}
+        {{ render_partial(  'feed/partials/video_list.html', 
+                            videos=videos, 
+                            page=1, 
+                            has_more_videos=has_more_videos) }}
 
 
     </div>
